cmd/team-exportor/deployment/team-exportor.service.yml
apiVersion: v1
kind: Service
metadata:
  name: team-exportor
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: web
  selector:
    app: team-exportor
  type: ClusterIP
